adding some comments messages

--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -4,4 +4,28 @@
 
 <h1>{{room.name}}</h1>
 
-{% endblock content %}
+<p>{{room.description}}</p>
+
+<div class="comment-wrapper">
+    <h3>Conversation</h3>
+    <hr>
+
+    {% for message in room_messages %}
+        <div>
+            <small>@{{message.user}} {{message.created|timesince}} ago </small>
+            <p>{{message.body}}</p>
+            <hr>
+        </div>
+    {% endfor %}
+</div>
+
+{% if request.user.is_authenticated %}
+<div class="comment-form">
+    <form action="" method="post">
+        {% csrf_token %}
+        <input type="text" name="body" placeholder="Write your message here ...">
+    </form>
+</div>
+{% endif %}
+
+{% endblock %}
